--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
+    "classnames": "^2.3.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "react": "18.2.0",
+    "react-container-query": "^0.12.1",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
